<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimaryDark"
    tools:context=".view.LoginActivity">

    <LinearLayout
        android:id="@+id/overlay_Register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#60000000"
        android:elevation="1dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/spin_kit"
            style="@style/SpinKitView.Large.ThreeBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:SpinKit_Color="@color/colorButtonNormal" />

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/card_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_errors_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:textColor="@color/red"
                android:textStyle="italic"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="EMAIL"
                android:textColor="@color/textColor"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/et_email_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/edittext_rounded"
                android:ems="10"
                android:fontFamily="@font/roboto_light"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:paddingTop="8dp"
                android:paddingEnd="10dp"
                android:paddingBottom="8dp"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintEdittextColor"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tv_emailError_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_light"
                android:visibility="gone"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:textColor="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:text="PASSWORD"
                android:textColor="@color/textColor"
                android:textStyle="italic" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColorHint="@color/hintEdittextColor"
                app:hintAnimationEnabled="false"
                app:hintEnabled="false"
                app:passwordToggleDrawable="@drawable/ic_invisible"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_Login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/edittext_rounded"
                    android:ems="10"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:paddingTop="6dp"
                    android:paddingEnd="10dp"
                    android:paddingBottom="6dp"
                    android:textColor="@color/textColor"
                    android:textColorHint="@color/hintEdittextColor"
                    android:textSize="12sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_createAccount_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_light"
                android:text="@string/don_t_have_an_account_register"
                android:textColor="@color/textColor"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_button"
                android:fontFamily="@font/roboto_condensed_bold"
                android:padding="12dp"
                android:text="LOGIN"
                android:textColor="@color/textColor"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>